김팀장님 지도하에 업데이트

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <nav class="gnb">
                 <ul>
                     <li>
-                        <a href="#">FASHION</a>
+                        <a href="#">패션</a>
                     </li>
                     <li>
                         <a href="#">BEAUTY</a>
