Revert "김팀장님 지도하에 업데이트"
This reverts commit 280794bc06c68fb3148df8c430e57ccf12059a84.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <nav class="gnb">
                 <ul>
                     <li>
-                        <a href="#">패션</a>
+                        <a href="#">FASHION</a>
                     </li>
                     <li>
                         <a href="#">BEAUTY</a>
